Added page navigation of products

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,3 +6,6 @@ ru:
     form:
       submit:
         '%{action} категорию'
+  will_paginate:
+    previous_label: '&larr; Назад'
+    next_label: 'Вперёд &rarr;'
